Add ingredientLink endpoints. Fix small typoes in swagger
